--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -197,6 +197,20 @@ body {
     border-radius: 1rem;
     opacity: 0.6;
 }
+
+.btn-default {
+    margin: 10px;
+    width:150px;
+    height:50px;
+    text-align:center;
+    font-size:1.1em;
+    font-family: 'Quicksand', sans-serif;
+    color: #fff;
+    background-color: black;
+    border-color: black;
+    border-radius: 1rem;
+    opacity: 0.6;
+}
 .btn-secondary{
     margin: 10px;
     width:150px;
@@ -208,6 +222,10 @@ body {
     opacity: 0.6;
 }
 .btn-primary:hover {
+    background-color: pink;
+    border-color: pink;
+}
+.btn-default:hover {
     background-color: pink;
     border-color: pink;
 }
