--- a/templates/edit_show.html
+++ b/templates/edit_show.html
@@ -4,14 +4,24 @@
 {% block title %}Edit Show{% endblock %}
 
 {% block content %}
-<div class="content">
-    <h1 class="heading">{{show.title}}</h1>
-    <p class="description">Edit Show Rating And Review</p>
-    {{wtf.quick_form(form, novalidate=True)}}
+<div class="container" id="all_friends_page">
+    <div class="movinest" id="movinest_circ">
+        <div class="movinest_circle"></div>
+    </div>
+    <div class="content" id="edit_container">
+        <h1 style="color: white;" class="heading-all">{{show.title}}</h1>
+        <div class="col-lg-8 col-md-10 mx-auto" id="edit-page">
+            {% for field, errors in form.errors.items() %}
+            {{ '/n '.join(errors) }}
+            {% endfor %}
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 </div>
-
+{% include "footer.html" %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+
 {% endblock %}
