--- a/templates/header.html
+++ b/templates/header.html
@@ -4,52 +4,83 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <title>MOVINEST</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+    <link  href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
           integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <script> function goBack() { window.history.back();}</script>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        {% if logged_in == False: %}
         <a class="navbar-brand" href="/">MOVINEST</a>
+        {% else %}
+        <a class="navbar-brand" href="{{ url_for('user_home') }}">MOVINEST</a>
+        {% endif %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            {% if logged_in == True: %}
+            <ul class="nav navbar-nav" id="ml-auto3">
+                <div class="dropdown">
+                    <button class="dropbtn btn-primary" id="you_button" onclick="myFunction()">You</button>
+                    <div class="dropdown-content" id="myDropdown">
+                        <a href="{{ url_for('update_info') }}">Update Info</a>
+                        <a href="{{ url_for('change_password') }}">Change Password</a>
+                        <a href="{{ url_for('are_you_sure') }}">Delete Account</a>
+                    </div>
+                </div>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    <a class="btn btn-secondary" id="logout_button" href="{{ url_for('logout') }}">Log Out</a>
                 </li>
-                {% if logged_in == False: %}
+            </ul>
+            {% endif %}
+            {% if logged_in == False: %}
+            <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                    <a class="btn btn-secondary" id="login_button" href="{{ url_for('login') }}">Log In</a>
                 </li>
-                {% else %}
+            </ul>
+            {% endif %}
+            <ul class="navbar-nav" id="ml-auto1">
+                {% if logged_in == True: %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('user_home') }}">Back</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('user_home') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+                    <a class="nav-link active" href="{{ url_for('movies') }}">Movies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for('shows') }}">Shows</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for('wishlist') }}">Watchlist</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for('friends') }}">Friends</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ url_for('search_friend') }}">Everybody</a>
                 </li>
                 {% endif %}
             </ul>
         </div>
     </div>
 </nav>
-
-
 </div>
 </nav>
 {% block content %}
@@ -57,6 +88,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+<script>
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+  var myDropdown = document.getElementById("myDropdown");
+    if (myDropdown.classList.contains('show')) {
+      myDropdown.classList.remove('show');
+    }
+  }
+}
+</script>
 </body>
 
 </html>
