--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,34 @@
 {% extends "header.html" %}
+{% block title %}Movinest{% endblock %}
+
 {% block content %}
-
-<div class="container">
-
-    <h1 style="color:#83888f;" class="welcome">Welcome Friend !</h1>
-    <a href="{{ url_for('login') }}" class="btn btn-primary btn-block btn-large">Login</a>
-    <a href="{{ url_for('register') }}" class="btn btn-secondary btn-block btn-large" id="login_button">Register</a>
-
+<div class="container" id="all_friends_page">
+        <div class="movinest" id="movinest_circ">
+            <div class="movinest_circle"></div>
+        </div>
+    <div class="container" id="landing_page">
+        <div class="movinest" id="movinest_logo">
+            <h1 class="logo">MOVINEST</h1>
+        </div>
+        <div class="movinest" id="movinest_intro">
+            <p class="intro">
+                MOVINEST helps you find new, interesting movies and shows, through connecting with
+                people in your community rather than relying on an algorithm.
+            </p>
+            <br>
+            <p class="intro">
+                MOVINEST is not a social media project, it is a fun resource that relies on community participation. <i
+                    class="fas fa-heart"></i>
+            </p>
+        </div>
+        <div class="movinest" id="movinest_button">
+            <a href="{{ url_for('register') }}" class="btn btn-primary btn-block btn-large"
+               id="register_button">Register</a>
+        </div>
+    </div>
 </div>
 
+{% include "footer.html" %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
