--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,38 +1,40 @@
+
+{% block title %}My Top Movies{% endblock %}
 {% extends "header.html" %}
 
-{% block title %}My Top 10 Movies{% endblock %}
-
 {% block content %}
-<div class="container">
-    <h1 style="color:#83888f;" class="heading" >My Top 10 Movies</h1>
-    {% for movie in movies %}
-    <div class="card">
-        <div class="front" style="background-image: url('{{movie.img_url}}');">
-            <p class="large">{{ movie.ranking }}</p>
+
+<div class="container" id="all_friends_big_cards">
+    <div class="movinest" id="movinest_circ">
+            <div class="movinest_circle_friend"></div>
+    </div>
+    <div class="container" id="search_all_my_content">
+        <div class="container text-center add">
+            <a href="{{ url_for('add_movie') }}" class="btn btn-primary btn-block btn-large">Add Movie</a>
         </div>
-        <div class="back">
-            <div>
-                <div class="title">{{movie.title}} <span class="release_date">({{movie.year}})</span></div>
-                <div class="rating">
-                    <label>{{movie.rating}}</label>
-                    <i class="fas fa-heart"></i>
+        {% for movie in movies %}
+        <div class="card">
+            <div class="front" style="background-image: url('{{movie.img_url}}');">
+                <p class="large" id="circle">{{ movie.ranking }}</p>
+            </div>
+            <div class="back">
+                <div>
+                    <div class="title">{{movie.title}} <br> <span class="release_date">({{movie.year}})</span></div>
+                    <div class="rating">
+                        <label>{{movie.rating}}</label>
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <p class="review">{{movie.review}}</p>
+                    <a href="{{ url_for('rate_movie', id=movie.id) }}" class="btn btn-primary btn-sm">Update</a>
+                    <a href="{{ url_for('delete_movie', id=movie.id) }}" class="btn btn-secondary btn-sm">Delete</a>
+
                 </div>
-                <p class="review">"{{movie.review}}"</p>
-<!--                <p class="overview">{{movie.description}}</p>-->
-
-                <a href="{{ url_for('rate_movie', id=movie.id) }}" class="btn btn-primary btn-sm">Update</a>
-                <a href="{{ url_for('delete_movie', id=movie.id) }}" class="btn btn-secondary btn-sm">Delete</a>
-
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
+{% include "footer.html" %}
 
-<div class="container text-center add">
-    <a href="{{ url_for('add_movie') }}" class="btn btn-primary btn-block btn-large">Add Movie</a>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+
 {% endblock %}
