--- a/templates/select_movie.html
+++ b/templates/select_movie.html
@@ -2,21 +2,40 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+{{ super() }}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
 
 {% block title %}Select Movie{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1 style="color:#83888f;" class="heading">Select Movie</h1>
-    {% for movie in options: %}
-  <p>
-    <a style="color:#83888f;" href="{{url_for('find_movie', id=movie.id)}}"> {{movie.title}} - {{movie.release_date}}</a>
-  </p>
-    {% endfor %}
+<div class="container" id="all_friends_page">
+    <div class="movinest" id="movinest_circ">
+        <div class="movinest_circle"></div>
+    </div>
+    <div class="container" id="search_all_my_content">
+        <h1 style="color: white;" class="heading-all" id="select_movie_text">Select Movie</h1>
+        <div class="movie_search_wrapper">
+            {% for movie in options: %}
+            {% if movie.poster_path != None %}
+            <div class="small-card">
+                <div class="front" style="background-image: url('{{movie_img}}/{{movie.poster_path}}');"></div>
+                <div class="back">
+                    <div class="title" id="search_item_title">{{movie.title}}</div>
+                    <br>
+                    <div class="add_button" id="add_movie_button">
+                        <a href="{{url_for('find_movie', id=movie.id)}}" class="btn btn-primary btn-sm">Add</a>
+                    </div>
+                </div>
+            </div>
+            </a>
+            {%endif%}
+            {% endfor %}
+        </div>
+    </div>
 </div>
+{% include "footer.html" %}
+
 {% endblock %}
