--- a/templates/select_show.html
+++ b/templates/select_show.html
@@ -2,21 +2,42 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+{{ super() }}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
 
 {% block title %}Select TV Show{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1 style="color:#83888f;" class="heading">Select TV Show</h1>
-    {% for show in options: %}
-  <p>
-    <a style="color:#83888f;" href="{{url_for('find_show', id=show.id)}}"> {{show.name}} - {{show.first_air_date}}</a>
-  </p>
-    {% endfor %}
+<div class="container" id="all_friends_page">
+    <div class="movinest" id="movinest_circ">
+        <div class="movinest_circle"></div>
+    </div>
+    <div class="container" id="search_all_my_content">
+        <h1 style="color: white;" class="heading-all" id="select_movie_text">Select TV Show</h1>
+        <div class="movie_search_wrapper">
+            {% for show in options: %}
+            {% if show.poster_path != None %}
+            <div class="small-card">
+                <div class="front" style="background-image: url('{{show_img}}/{{show.poster_path}}');"></div>
+                <div class="back">
+                    <div>
+                        <div class="title" id="search_item_title">{{show.name}}</div>
+                        <br>
+                        <div class="add_button">
+                            <a href="{{url_for('find_show', id=show.id)}}" class="btn btn-primary btn-sm">Add</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </a>
+            {%endif%}
+            {% endfor %}
+        </div>
+    </div>
 </div>
+{% include "footer.html" %}
+
 {% endblock %}
