--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,28 +1,36 @@
 {% extends "header.html" %}
 
-{% block title %}My Top 10 Movies{% endblock %}
+{% block title %}My Home Page{% endblock %}
 
 {% block content %}
-<div class="outer">
-    <img src="/static/img/avatars/avatar_24.png" class="profile_pic">
-    <div class="container" id="user">
-        <div class="user">
-            <h2 style="color:#83888f;" class="heading" id="name">Hi {{name}}!</h2>
+<div class="container" id="all_friends_page">
+    <div class="movinest" id="movinest_circ">
+        <div class="movinest_circle_friend" id="profile_cirle"></div>
+    </div>
+    <div class="stack-container" id="search_all_user">
+        <div class="container" id="pic">
+            <img src="{{profile_image}}" class="profile_pic">
         </div>
-        <div class="user">
+        <div class="container" id="edit">
+            <a href="{{url_for('change_pic')}}"><i class="far fa-edit"></i></a>
+        </div>
+        <div class="container" id="user">
+            <h2 style="color:white;" class="heading_main" id="user_name">Hi {{name}}!</h2>
+            <br>
             <a href="{{ url_for('movies') }}" class="heading_main">Movies</a>
-        </div>
-        <br>
-        <div class="user">
+            <br>
             <a href="{{ url_for('shows') }}" class="heading_main">Shows</a>
+            <br>
+            <a href="{{ url_for('friends') }}" class="heading_main">Friends</a>
+            <br>
+            <a href="{{ url_for('wishlist') }}" class="heading_main">Watchlist</a>
         </div>
     </div>
-    <!--    <div class="container">-->
-    <!--        <img src="/static/img/avatars/avatar_24.png" class="profile_pic">-->
-    <!--    </div>-->
 </div>
+{% include "footer.html" %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+
 {% endblock %}
