--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="footer-text-left">
-        <p class="copyright text-muted">Copyright &copy; MOVINEST 2021</p>
+        <p class="copyright text-muted">&copy; MOVINEST 2021</p>
     </div>
     {% if logged_in == True: %}
     <div>
