--- a/templates/friend_shows.html
+++ b/templates/friend_shows.html
@@ -16,7 +16,7 @@
             </div>
             <div class="back">
                 <div>
-                    <div class="title">{{show.title}} <br> <span class="release_date">({{show.year}})</span></div>
+                    <div class="title">{{show.title}}<br></div>
                     <div class="rating">
                         <label>{{show.rating}}</label>
                         <i class="fas fa-heart"></i>
