--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -44,8 +44,7 @@
                         <div class="front" style="background-image: url('{{show.img_url}}');"></div>
                         <div class="back">
                             <div>
-                                <div class="title">{{show.title}} <br> <span class="release_date">({{show.year}})</span>
-                                </div>
+                                <div class="title">{{show.title}}<br></div>
                                 <div class="rating">
                                     <p>{{show.friend}}</p>
                                     <i class="fas fa-heart"></i>
