--- a/templates/search_friends.html
+++ b/templates/search_friends.html
@@ -15,19 +15,18 @@
         {% for user in users %}
         <div class="mini-stack-container">
             <div class="container" id="mini-name">
-                <a href="{{ url_for('user_profile', selected_user=user.id) }}" class="btn mini_square">{{user.firstname}}
-                    {{user.lastname}}</a>
+                <a href="{{url_for('user_profile', selected_user=user.id)}}" id="mini_name_text">{{user.firstname}} {{user.lastname}}</a>
             </div>
             <div class="container" id="line">
                 <hr class="line">
             </div>
-            <div class="container" id="mini-pic">
-                <a href="{{ url_for('user_profile', selected_user=user.id) }}"><img src="{{user.avatar_url}}"
-                                                                                    id="mini_avatar"></a>
+            <div href="{{ url_for('user_profile', selected_user=user.id) }}" class="container" id="mini-pic">
+                    <img src="{{user.avatar_url}}" id="mini_avatar">
             </div>
             <div class="container" id="mini-location">
                 <p id="user_location">{{user.location}}</p>
             </div>
+            <div href="{{ url_for('user_profile', selected_user=user.id) }}" class="mini_square"></div>
         </div>
         {% endfor %}
     </div>
