--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
         </div>
         <div class="movinest" id="movinest_intro">
             <p class="intro">
-                Movinest was made with love by Liana, a self-taught, full-stack developer living in New Zealand.</p>
+                Movinest was designed and built by Liana, a self-taught, full-stack developer living in New Zealand.</p>
             <br>
             <p class="intro">
                 <i class="fas fa-heart"></i>
