--- a/templates/friend_movies.html
+++ b/templates/friend_movies.html
@@ -23,7 +23,7 @@
                     </div>
                     <p class="review">{{movie.review}}</p>
                     <a href="{{ url_for('movie_wishlist', movie_id=movie.id, friend_id=user.id) }}"
-                       class="btn btn-primary btn-sm">Wishlist</a>
+                       class="btn btn-primary btn-sm">Watchlist</a>
                 </div>
             </div>
         </div>
